# cfb

./: Cargo.toml  TEST_PLAN  TODO
docs/: crates.js  help.html  search-index.js  settings.html  source-files.js
docs/cfb/: all.html  fn.main.html  index.html  sidebar-items.js
docs/cfb/cli/: enum.Commands.html  index.html  sidebar-items.js  struct.Cli.html  struct.CompileArgs.html  struct.RecordArgs.html
docs/cfb/compile/: enum.OutputFormat.html  fn.compile.html  index.html  sidebar-items.js  struct.CaptureFile.html  struct.Frame.html
docs/cfb/record/: fn.capture.html  index.html  sidebar-items.js
docs/implementors/clap_builder/derive/: trait.Args.js  trait.CommandFactory.js  trait.FromArgMatches.js  trait.Parser.js  trait.Subcommand.js  trait.ValueEnum.js
docs/implementors/core/clone/: trait.Clone.js
docs/implementors/core/fmt/: trait.Debug.js
docs/implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
docs/implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
docs/src/cfb/: cli.rs.html  compile.rs.html  main.rs.html  record.rs.html
src/: cli.rs  compile.rs  framebuffer.rs  main.rs  parse.rs  record.rs
