[package]
name = "cfb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.5", features = ["derive"] }
ctrlc = "3.2.5"
framebuffer = "0.3.1"
image = "0.24.6"
minimp4 = "0.1.0"
openh264 = "0.4.0"

